apps/landing/fleet/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniia-landing
spec:
  selector:
    matchLabels:
      app: uniia-landing
  template:
    metadata:
      labels:
        app: uniia-landing
    spec:
      containers:
      - name: uniia-landing
        image: ghcr.io/uniia-com-ua/uniia-landing:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
