apps/landing/fleet/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uniia-landing
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: uniia.com.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uniia-landing
            port:
              number: 80
  tls:
  - hosts:
    - uniia.com.ua
    secretName: uniia-tls-cert
